syntax = "proto3";
package ibc.lightclients.multiv.v1;

option go_package = "github.com/datachainlab/ibc-proxy/modules/light-clients/xx-multiv/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "ibc/core/client/v1/client.proto";
import "ibc/core/commitment/v1/commitment.proto";

message ClientState {
  option (gogoproto.goproto_getters) = false;

  google.protobuf.Any underlying_client_state = 1;
  uint32 depth = 2;
}

message MultiProof {
  option (gogoproto.goproto_getters) = false;

  Proof head = 1 [(gogoproto.nullable) = false];
  repeated Proof branches = 2 [(gogoproto.nullable) = false];
  LeafProof leaf = 3 [(gogoproto.nullable) = false];
}

message Proof {
  option (gogoproto.goproto_getters) = false;

  bytes client_proof = 1;
  google.protobuf.Any client_state = 2;
  bytes consensus_proof = 3;
  google.protobuf.Any consensus_state = 4;
  ibc.core.client.v1.Height proof_height = 5 [(gogoproto.nullable) = false];
  ibc.core.client.v1.Height consensus_height = 6 [(gogoproto.nullable) = false];
}

message LeafProof {
  option (gogoproto.goproto_getters) = false;

  bytes proof = 1;
  ibc.core.client.v1.Height proof_height = 2 [(gogoproto.nullable) = false];
}
